# rebebuca

./: .env  .eslintrc.cjs  .gitignore  .prettierrc.cjs  Makefile  README.en.md  README.md  code_count.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  update.json  vite.config.ts
.github/workflows/: release.yml
scripts/: check.mjs
scripts/decorator-dmg/: sample
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: app_setting.rs  lib.rs  prelude.rs  project.rs  project_detail.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_app_setting.rs  m20220101_000001_create_project.rs  m20220101_000001_create_project_detail.rs  m20220101_000001_create_version.rs  m20220101_000002_app_setting_ai.rs
src-tauri/src/: connection.rs  main.rs  util.rs
src-tauri/src/app/: menu.rs
src-tauri/src/command/: app_setting.rs  mod.rs  project.rs  project_detail.rs
src-tauri/src/service/: app_setting.rs  mod.rs  project.rs  project_detail.rs
src/apis/: index.ts
src/components/anwser/: index.scss  index.tsx
src/components/ffmpeg-param-table/: index.scss  index.tsx
src/components/setting/: index.scss  index.tsx
src/constants/: keys-en.ts  keys.ts
src/hooks/: index.tsx
src/layouts/: MainLayout.tsx  index.scss
src/pages/home/: index.module.scss  index.tsx
src/pages/project/: index.tsx
src/pages/project/detail/: index.tsx
src/pages/project/edit/: index.tsx
src/pages/project/list/: index copy.tsx  index.tsx
src/pages/project/new/: index.tsx
src/pages/project/setting/: index.tsx
src/router/: index.tsx
src/store/: commandList.ts  index.ts  settingSlice.ts  settings.ts
src/utils/: export.ts  ffmpeg.ts  getLocalFFPath.ts  getffmpeg.ts  i18n.ts  index.ts  parse-streaming.ts  parseFFUrl.ts  request-ai.ts  request-deepseek.ts  request.ts  splitStringWithQuotes.ts  throttle.ts  update.ts
src/utils/locales/en/: translation.json
src/utils/locales/zh-CN/: translation.json
