[package]
name = "Rebebuca"
version = "0.1.0"
description = "ffmpeg desktop manager"
authors = ["godkun"]
license = "Apache License"
repository = "https://github.com/rebebuca/rebebuca"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
once_cell = "1.18.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

tauri = { version = "1.5", features = [ "macos-private-api", "updater", "api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.sea-orm]
version = "0.12.6"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
default-features = false

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
